fix: align submenu in mobile

--- a/wp-content/themes/dna/assets/scss/_menu.scss
+++ b/wp-content/themes/dna/assets/scss/_menu.scss
@@ -72,21 +72,16 @@ nav.top-menu{
             }
             ul.sub-menu{
                 list-style: none;
-                position: absolute;
-                background-color: $blue1;
+                background-color: $blue2;
                 max-height: 0px;
                 padding: 0 20px;
                 overflow: hidden;
                 transition: max-height .3s;
                 right: 0;
-                margin-top: 10px;
-                margin-right: 50px;
-                @media (min-width: $tablets) {
-                    margin-right: 20px;
-                }
                 @media (min-width: $desktops) {
+                    position: absolute;
+                    background-color: $blue1;
                     right: unset;
-                    margin-right: 0px;
                 }
                 > *:first-child{
                     padding-top: 20px;
